Add repository level

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,9 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/photogram
 spring.datasource.username=postgres
 spring.datasource.password=root
 spring.jpa.generate-ddl=true
+
+spring.jpa.database=POSTGRESQL
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.datasource.initialization-mode=always
